fix: UI spacing and sizes

--- a/assets/style.css
+++ b/assets/style.css
@@ -47,7 +47,18 @@ body {
 	color: var(--clr-marine-blue);
 }
 
+
 /* Utility classes */
+.heading {
+	font-size: 1.5rem;
+}
+
+@media (min-width: 50rem) {
+	.heading {
+		font-size: 2rem;
+	}
+}
+
 .sub-heading {
 	color: var(--clr-cool-gray);
 	margin-top: 0.25rem;
